--- a/pages/goodsDetail/goodsDetail.wxss
+++ b/pages/goodsDetail/goodsDetail.wxss
@@ -14,10 +14,11 @@
 	margin-bottom: 6px;
 }
 .section-title{
-  color: #e6424b;
+  color: #000;
 	text-align: center;
 	font-size: 32rpx;
 	margin: 0 0 20px;
+  float:left;
 }
 .description{
 	font-size: 32rpx;
@@ -176,3 +177,18 @@
   margin: 0 10px 0 0;
   box-shadow: 0 0 3px #dedede;
 }
+
+
+.clear{clear: both;overflow: hidden;}
+.banner{height:300px;}
+.slide-image {width:100%;height:100%;}
+
+.info-price{border-bottom:1px solid #F6F6F6;background: #fff;padding:0px 15px;}
+.price{ float:left;height:50px;line-height:50px;color:#FF6666;font-size: 20px; }
+.fenxiang{text-align: center; font-size: 10px; color:#999;width:50px;line-height: 20px;overflow: hidden;float:right;}
+.fenxiang image{width:20px;height:20px;}
+
+.flex{ display: -webkit-box;display: -webkit-flex;  display: -ms-flexbox; display: flex; width: 100%;}
+.flex>.sub{ -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; overflow: hidden;}
+
+.info-title{ background: #fff; padding:10px 15px;font-size: 15px;}
