--- a/pages/personCenter/personCenter.wxss
+++ b/pages/personCenter/personCenter.wxss
@@ -1,3 +1,24 @@
+.mine-top{
+	text-align: center;
+	position: relative;
+	padding: 60rpx 0;
+	margin: 0 -40rpx;
+}
+.avatar{
+	border-radius:200px;
+	overflow:hidden;
+	width:100px;
+	display:inline-block;
+	height:100px;
+	margin: 0 0 10rpx 0;
+}
+.username{
+	color: rgb(5, 5, 5);
+	display: block;
+	text-align: center;
+	font-size: 28rpx;
+}
+
 .user-info {
     height: 348rpx;
     color: #fff;
